# backend_rust_barbers

./: .gitignore  Cargo.toml  README.md  env.example
br_backend/: .env.example  main.py  requirements.txt
br_backend/templates/: index.html
deploy/: nginx_eventlyil.xyz.conf  rust_backend.service
src/: auth.rs  fcm.rs  lib.rs  main.rs  reminders.rs  team.rs
src/opportunities/: algorithm.rs  cache.rs  handlers.rs  mod.rs  repository.rs  scheduler.rs  types.rs  vacation_expander.rs
