[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
firestore = "0.47"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
# Adding rustls to ensure a crypto provider is available as per the docs
rustls = "0.23"
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }
futures = "0.3.31"
jsonwebtoken = { version = "10.2.0", features = ["use_pem", "rust_crypto"] }
reqwest = { version = "0.13.1", features = ["json"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
lazy_static = "1.5.0"
chrono = { version = "0.4", features = ["serde"] }
